# minecraft-server-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  buffer.c  crypto.c  main.c  utils.c  var_int.c
include/: buffer.h  crypto.h  md5.h  utils.h  uuid.h
include/packets/: protocol_stage.h
include/packets/c2s/: handshaking.h
include/packets/s2c/: status.h
lib/: md5.c  uuid.c
packets/c2s/: handshaking.c  status.c
packets/handlers/: handshaking.c  status.c
packets/s2c/: status.c
src/: CMakeLists.txt  buffer.c  main.c  packet_definition.c  packet_handlers.c  utils.c  var_int.c
src/include/: buffer.h  packet_definition.h  packet_handlers.h  packet_ids.h  server.h  utils.h  var_int.h
src/include/packets/c2s/: handshaking.h  status.h
src/include/packets/handlers/: handshaking.h  status.h
src/include/packets/s2c/: status.h
src/include/utils/: protocol_utils.h  utils.h
src/packets/c2s/: handshaking.c  status.c
src/packets/handlers/: handshaking.c  status.c
src/packets/s2c/: status.c
src/utils/: protocol_utils.c  utils.c
utils/: utils.c
